--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --downlevelIteration",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test",
     "version": "npm run format && git add -A src"
   },
   "repository": {
@@ -40,6 +39,8 @@
   },
   "devDependencies": {
     "@types/hdkey": "^2.0.1",
+    "@types/w3c-web-usb": "^1.0.5",
+    "@types/web3-provider-engine": "^14.0.1",
     "typescript": "^4.5.5"
   }
 }
